WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151462
MediaStream: Fix mock video source crash
https://bugs.webkit.org/show_bug.cgi?id=151462
Summary
MediaStream: Fix mock video source crash
Eric Carlson
Reported
2015-11-19 14:03:27 PST
The ASAN and GuardMalloc are crashing in MockRealtimeVideoSource::drawText.
Attachments
Proposed patch.
(1.97 KB, patch)
2015-11-19 14:08 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-11-19 14:03:58 PST
<
rdar://problem/23569801
>
Eric Carlson
Comment 2
2015-11-19 14:08:24 PST
Created
attachment 265901
[details]
Proposed patch.
David Kilzer (:ddkilzer)
Comment 3
2015-11-20 00:28:03 PST
***
Bug 151353
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 4
2015-11-20 01:06:10 PST
Comment on
attachment 265901
[details]
Proposed patch. Clearing flags on attachment: 265901 Committed
r192679
: <
http://trac.webkit.org/changeset/192679
>
WebKit Commit Bot
Comment 5
2015-11-20 01:06:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug