MediaStream: Fix mock video source crash https://bugs.webkit.org/show_bug.cgi?id=151462

Reviewed by Alexey Proskuryakov.

No new tests, this fixes existing tests.

* platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::drawText): Declare the String used to intialize a
  StringView explicitly so it outlives the StringView.


Canonical link: https://commits.webkit.org/169641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192679 268f45cc-cd09-0410-ab3c-d52691b4dbfc